[package]
name = "cita-monitor"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.10.0"
hyper = "0.11"
uuid = { version = "0.4", features = ["v4"] }
protobuf = { version = "^1.0.0" }
num_cpus = "1"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
spin = "0.4"
log = "0.3"
clap = "2"
prometheus = { git = "https://github.com/cryptape/rust-prometheus.git", branch = "metrics_collector" }

[dependencies.amqp]
version = "0.1"
default-features = false

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
sha3hash = ["libproto/sha3hash", "proof/sha3hash"]
